--- a/YourShift/YourShift.ini
+++ b/YourShift/YourShift.ini
@@ -21,9 +21,14 @@ Callsign = "ADAM-7-15"
 
 Message = "1st"
 
+[Station]
+
 ;What's your favourite Police Station? 
 
 Police_Station = "Mission Row"
+
+; Do you want a Waypoint?
+Waypoint = true
 
 
 
