--- a/YourShift/YourShift.csproj
+++ b/YourShift/YourShift.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LSPD First Response">
-      <HintPath>..\..\..\References\LSPD First Response.dll</HintPath>
+      <HintPath>..\LSPD First Response.dll</HintPath>
     </Reference>
     <Reference Include="RagePluginHook">
-      <HintPath>..\..\..\References\RagePluginHook.dll</HintPath>
+      <HintPath>..\RagePluginHook.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
