--- a/YourShift/YourShift.csproj
+++ b/YourShift/YourShift.csproj
@@ -36,10 +36,10 @@
       <HintPath>..\packages\LiteDB.5.0.17\lib\net45\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="LSPD First Response">
-      <HintPath>..\..\..\References\LSPD First Response.dll</HintPath>
+      <HintPath>..\LSPD First Response.dll</HintPath>
     </Reference>
     <Reference Include="RagePluginHook">
-      <HintPath>..\..\..\References\RagePluginHook.dll</HintPath>
+      <HintPath>..\RagePluginHook.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
